feat: update extensions mapping

--- a/src/main/resources/extensions-mapping.properties
+++ b/src/main/resources/extensions-mapping.properties
@@ -31,10 +31,21 @@ io.quarkus.quarkus-smallrye-jwt.doc.url=https://quarkus.io/guides/security-jwt-b
 io.quarkus.quarkus-resteasy-reactive-jackson=true
 io.quarkus.quarkus-resteasy-reactive-jackson.doc.url=https://quarkus.io/guides/rest-json
 io.quarkus.quarkus-resteasy-reactive-jackson.config.url=
+io.quarkus.quarkus-rest-client-reactive-jackson=true
+io.quarkus.quarkus-rest-client-reactive-jackson.doc.url=https://quarkus.io/guides/rest-client
+io.quarkus.quarkus-rest-client-reactive-jackson.config.url=
+io.quarkus.quarkus-oidc-client-reactive-filter=true
+io.quarkus.quarkus-oidc-client-reactive-filter.doc.url=https://quarkus.io/guides/security-openid-connect-client-reference
+
 
 # Quarkiverse
-io.quarkiverse.mockserver.quarkus-mockserver-test.doc.url=https://docs.quarkiverse.io/quarkus-mockserver/dev/index.html
-io.quarkiverse.mockserver.quarkus-mockserver-test.config.url=https://raw.githubusercontent.com/quarkiverse/quarkus-mockserver/{version}/docs/modules/ROOT/pages/includes/quarkus-mockserver.adoc
+io.quarkiverse.mockserver.config.url=https://github.com/quarkiverse/{artifactId}/blob/{version}/docs/modules/ROOT/pages/includes/{artifactId}.adoc
+io.quarkiverse.mockserver.doc.url=https://docs.quarkiverse.io/{artifactId}/dev/index.html
+io.quarkiverse.mockserver.quarkus-mockserver-test=true
+
+io.quarkiverse.openapi.generator.config.url=https://github.com/quarkiverse/{artifactId}/blob/{version}/docs/modules/ROOT/pages/includes/{artifactId}.adoc
+io.quarkiverse.openapi.generator.doc.url=https://docs.quarkiverse.io/{artifactId}/dev/index.html
+io.quarkiverse.openapi.generator.quarkus-openapi-generator=true
 
 # 1000kit
 org.tkit.quarkus.lib.config.url=https://github.com/1000kit/tkit-quarkus/blob/{version}/docs/modules/tkit-quarkus/pages/includes/{artifactId}.adoc
@@ -56,7 +67,7 @@ org.tkit.quarkus.lib.tkit-quarkus-security=true
 org.tkit.onecx.quarkus.config.url=https://github.com/onecx/onecx-quarkus/blob/{version}/docs/modules/onecx-quarkus/pages/includes/{artifactId}.adoc
 org.tkit.onecx.quarkus.doc.url=https://onecx.github.io/docs/onecx-quarkus/current/onecx-quarkus/{artifactId}.html
 
-org.tkit.onecx.quarkus.onecx-permission=true
+org.tkit.onecx.quarkus.onecx-permissions=true
 org.tkit.onecx.quarkus.onecx-tenant=true
 org.tkit.onecx.quarkus.onecx-parameters=true
 org.tkit.onecx.quarkus.onecx-core=true
