feat: update docs mapping

--- a/src/main/resources/extensions-mapping.properties
+++ b/src/main/resources/extensions-mapping.properties
@@ -36,7 +36,21 @@ io.quarkus.quarkus-rest-client-reactive-jackson.doc.url=https://quarkus.io/guide
 io.quarkus.quarkus-rest-client-reactive-jackson.config.url=
 io.quarkus.quarkus-oidc-client-reactive-filter=true
 io.quarkus.quarkus-oidc-client-reactive-filter.doc.url=https://quarkus.io/guides/security-openid-connect-client-reference
-
+io.quarkus.quarkus-cache=true
+io.quarkus.quarkus-cache.doc.url=https://quarkus.io/guides/cache
+io.quarkus.quarkus-rest=true
+io.quarkus.quarkus-rest.doc.url=https://quarkus.io/guides/rest
+io.quarkus.quarkus-rest-jackson=true
+io.quarkus.quarkus-rest-jackson.doc.url=https://quarkus.io/guides/rest-json
+io.quarkus.quarkus-rest-jackson.config.url=
+io.quarkus.quarkus-rest-client=true
+io.quarkus.quarkus-rest-client.doc.url=https://quarkus.io/guides/rest-client
+io.quarkus.quarkus-rest-client-jackson=true
+io.quarkus.quarkus-rest-client-jackson.doc.url=https://quarkus.io/guides/rest-client
+io.quarkus.quarkus-rest-client-jackson.config.url=
+io.quarkus.quarkus-oidc-client-filter=true
+io.quarkus.quarkus-oidc-client-filter.doc.url=https://quarkus.io/guides/security-openid-connect-client-reference
+io.quarkus.quarkus-jackson=false
 
 # Quarkiverse
 io.quarkiverse.mockserver.config.url=https://github.com/quarkiverse/{artifactId}/blob/{version}/docs/modules/ROOT/pages/includes/{artifactId}.adoc
