feaat: add fix version number

--- a/src/main/resources/extensions-mapping.properties
+++ b/src/main/resources/extensions-mapping.properties
@@ -1,6 +1,7 @@
 # Quarkus
 io.quarkus.config.url=https://github.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/{version}/config/{artifactId}.adoc
 io.quarkus.version.pattern=\\d.\\d
+io.quarkus.version.fix=latest
 
 io.quarkus.quarkus-liquibase=true
 io.quarkus.quarkus-liquibase.doc.url=https://quarkus.io/guides/liquibase
