feat: force-recreate and improved layout

--- a/src/main/resources/extensions-mapping.properties
+++ b/src/main/resources/extensions-mapping.properties
@@ -52,6 +52,8 @@ io.quarkus.quarkus-rest-client-jackson.config.url=
 io.quarkus.quarkus-oidc-client-filter=true
 io.quarkus.quarkus-oidc-client-filter.doc.url=https://quarkus.io/guides/security-openid-connect-client-reference
 io.quarkus.quarkus-jackson=false
+io.quarkus.quarkus-rest-client-oidc-filter=true
+io.quarkus.quarkus-rest-client-oidc-filter.doc.url=https://quarkus.io/guides/security-openid-connect-client-reference#rest-client-oidc-filter
 
 # Quarkiverse
 io.quarkiverse.mockserver.config.url=https://github.com/quarkiverse/{artifactId}/blob/{version}/docs/modules/ROOT/pages/includes/{artifactId}.adoc
